--- a/Views/assetDesign.html
+++ b/Views/assetDesign.html
@@ -1,17 +1,11 @@
-    <div class="content-wrapper">
+<header class="topbar-nav">
+    <nav class="navbar navbar-expand bg-white">
+        <h4>{{pagename}}</h4>    
+    </nav>
+</header>
+<div class="content-wrapper">
     <div class="container-fluid">
-
-      <!--Start Dashboard Content-->
-      <div class="row">
-        <div class="col-12 col-lg-12 col-xl-12">
-            <div class="card" style="margin-bottom: 5px;">
-              <div class="card-body topheader">
-                  <h4>{{pagename}}</h4>   
-              </div>
-          </div>
-        </div>
-      </div>
-      
+      <!--Start Dashboard Content-->      
       <div class="row">
           <div class="col-12 col-lg-6 col-xl-6">
           <div class="card">
@@ -25,8 +19,7 @@
                               <option value="" selected="" disabled="">---Select Element Template---</option>
                      </select> 
                      </span>                        
-                </div>
-                
+                </div>                
             </div>
           </div>
         </div>
