--- a/Views/allocation.html
+++ b/Views/allocation.html
@@ -1,24 +1,16 @@
-    <div class="content-wrapper">
+<header class="topbar-nav">
+    <nav class="navbar navbar-expand bg-white">
+        <h4>{{pagename}}</h4>    
+    </nav>
+</header>
+<div class="content-wrapper">
     <div class="container-fluid">
-
-      <!--Start Dashboard Content-->
-        <div class="row">
-          <div class="col-12 col-lg-12 col-xl-12">
-              <div class="card border-secondary" style="margin-bottom: 5px;">
-                <div class="card-body" style="padding: 15px;text-align: center;text-transform: uppercase;">
-                    <h4>{{pagename}}</h4>    
-                </div>
-            </div>
-          </div>
-        </div>
-
-    
+      <!--Start Dashboard Content-->    
         <div class="row" id="loadedDiv">       
         
         </div>
       
-      <!--End Row-->		  
-  
+      <!--End Row-->
     <!-- End container-fluid-->
     <div class="container-fluid" style="height: 100px;">
   
