--- a/Views/default.html
+++ b/Views/default.html
@@ -1,4 +1,9 @@
-  <div class="content-wrapper">
+<header class="topbar-nav">
+    <nav class="navbar navbar-expand bg-white">
+        <h4>{{pagename}}</h4>    
+    </nav>
+</header>
+<div class="content-wrapper">
     <div class="container-fluid">
 
       <!--Start Dashboard Content-->
@@ -6,7 +11,7 @@
         <div class="col-12 col-lg-12 col-xl-12">
             <div class="card" style="margin-bottom: 5px;">
               <div class="card-body topheader">
-                  <h4>{{pagename}}</h4>
+                  <h4>{{divname1}}</h4>
               </div>
           </div>
         </div>
@@ -77,7 +82,7 @@
         <div class="col-12 col-lg-12 col-xl-12">
             <div class="card" style="margin-bottom: 5px;">
               <div class="card-body topheader">
-                   <h4>{{divname}}</h4>
+                   <h4>{{divname2}}</h4>
               </div>
           </div>
         </div>
