--- a/Views/master_dashboard.html
+++ b/Views/master_dashboard.html
@@ -1,15 +1,11 @@
+<header class="topbar-nav">
+    <nav class="navbar navbar-expand bg-white">
+        <h4>{{pagename}}</h4>    
+    </nav>
+</header>
 <div class="content-wrapper">
     <div class="container-fluid">
       <!--Start Dashboard Content-->
-        <div class="row">
-          <div class="col-12 col-lg-12 col-xl-12">
-              <div class="card" style="margin-bottom: 5px;">
-                <div class="card-body topheader">
-                    <h4>{{pagename}}</h4>  
-                </div>
-            </div>
-          </div>
-        </div>      
         <div class="row">
             <div class="col-12 col-lg-6 col-xl-4">
               <div class="card">
@@ -66,7 +62,7 @@
                 </div>
             </div>          
         </div>     
-      <div class="row">
+      <div class="row tabDiv">
           <div class="col-12 col-lg-12 col-xl-12">
                <div class="card">
                     <div class="card-body scrollbar" id="style-3">      
@@ -77,33 +73,36 @@
           </div>         
       </div>
       
-      <div class="row">
-           <div class="col-12 col-lg-6 col-xl-1">
+      <div class="row tabDiv">
+           <div class="col-12 col-lg-6 col-xl-2">
                 <div class="card">
                     <div class="card-body chartDiv scrollbar" id="style-1">
                         <ul id="attributesListLeft"></ul> 
                     </div>
                </div>
             </div>
-            <div class="col-12 col-lg-6 col-xl-7">
+            <div class="col-12 col-lg-6 col-xl-10">
                 <div class="card">
                     <div class="card-body chartDiv">
                         <div id="container" class="chartContainer"></div>
                         <div id="eventFrame" class="eventFrameContainer scrollbar"></div>
                     </div>
                 </div>
-            </div>      
-        
-            <div class="col-12 col-lg-6 col-xl-4">              
+            </div>
+      </div>
+      <div class="row tabDiv">        
+            <div class="col-12 col-lg-6 col-xl-8">              
                 <div class="card map">
                     <div class="card-body" id="iframeLoad">      
                         <iframe class="iframeMap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d167998.10803373056!2d2.206977064368058!3d48.858774103123785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2sParis%2C+France!5e0!3m2!1sen!2sin!4v1542603994587"  allowfullscreen="">
                         </iframe>
                     </div>
                 </div>
+            </div>
+           <div class="col-12 col-lg-6 col-xl-4">     
                 <div class="card">
                     <div class="card-body addcellcls">
-                         <div class="form-group">                         
+                         <div class="form-group elementsCell">                         
                           <span class="slect60">
                               <select id="elementChildList" class="form-control">
                                 <option value="">---Select Elements---</option>
@@ -115,10 +114,8 @@
                     </div>  
                     </div>
                 </div>
-           
             </div>
-           
-            </div> 
+        </div> 
     <!--End Row-->
     <!--End Dashboard Content-->
     </div>
