--- a/assets/css/app-style.css
+++ b/assets/css/app-style.css
@@ -238,7 +238,7 @@ hr {
 /* Page Content Wrapper */
 .content-wrapper {
     margin-left: 240px;
-    padding-top: 70px;
+    padding-top: 10px;
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 70px;
@@ -251,9 +251,13 @@ hr {
   
 /* Topbar Header */   
 .topbar-nav .navbar{
-   padding: 0px 15px;
+   padding: 15px 15px;
    z-index: 999;
    height: 60px;
+   margin-left: 240px;
+   text-align: center;
+   text-transform: uppercase;
+   display: block;
    -webkit-box-shadow: 0 2px 6px 0 rgba(218, 218, 253, 0.65), 0 0px 6px 0 rgba(206, 206, 238, 0.54);
    box-shadow: 0 2px 6px 0 rgba(218, 218, 253, 0.65), 0 0px 6px 0 rgba(206, 206, 238, 0.54);
 }
