--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,8 +54,7 @@ li {
   padding-left: 1.3em;
 }
 .content-wrapper {
-    height: 950px;
-    max-height: 950px;
+    min-height: 700px;
 }
 .elemList{
     padding: 0px;
@@ -208,9 +207,9 @@ body::-webkit-scrollbar-track,.chartDiv::-webkit-scrollbar-track,.style-1::-webk
     width: 10%;
 }
 .topheader{
-    padding: 15px;
+    padding: 10px;
     text-align: center;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 .wd100{
     width:100%;
@@ -218,7 +217,7 @@ body::-webkit-scrollbar-track,.chartDiv::-webkit-scrollbar-track,.style-1::-webk
 .iframeMap{
     border:1px solid #ccc;
     width:100%;
-    height: 450px;
+    height: 97%;
 }
 .AtName{
     
@@ -352,6 +351,13 @@ body::-webkit-scrollbar-track,.chartDiv::-webkit-scrollbar-track,.style-1::-webk
         border-color: #495057;
 }
 .addcellcls{
-        height: 134px;
-        padding-top: 8%;
+        padding-top: 20%;
 }
+#iframeLoad,.addcellcls{
+    height: 280px;
+}
+.elementsCell{
+    border: 2px solid #75808a;
+    height: 80px;
+    padding: 2%;
+ }
